--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.0.6",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
+    "standard": "^12.0.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5"
   }
