convert to serverless

--- a/server/.babelrc
+++ b/server/.babelrc
@@ -3,6 +3,7 @@
         [
             "@babel/preset-env",
             {
+                "loose": true,
                 "targets": {
                     "node": "current"
                 }
@@ -10,6 +11,7 @@
         ]
     ],
     "plugins": [
-        "@babel/plugin-transform-runtime"
+        "add-module-exports",
+        "@babel/plugin-proposal-export-default-from"
     ]
 }
